# PHANTOMa

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  README.org
examples/: audio.rs  shader.rs  text.rs
examples/scene/: main.rs
lib/: Cargo.toml
lib/src/: alpha.rs  app.rs  app_asyncmaybe.rs  async_closure.rs  audio.rs  audioz.rs  gfx.rs  interp.rs  lib.rs  math.rs  midi.rs  osc.rs  prelude.rs  resource.rs  test.rs  time.rs  twitch.rs  wavefront.rs
lib/src/app/: app.rs  builder.rs  mod.rs
lib/src/audio/: analyze.rs  client.rs  midi.rs  mod.rs
lib/src/gfx/: animation.rs  camera.rs  frame.rs  gltf.rs  light.rs  lights.rs  material.rs  mesh.rs  mod.rs  model.rs  prelude.rs  scene.rs  test.rs  uniform.rs
lib/src/gfx/pass/: composite.rs  filter.rs  image.rs  mod.rs  ring.rs  synth.rs  text.rs
lib/src/gfx/wgpu/: defaults.rs  mod.rs  texture.rs
lib/src/gfx/wgpu/util/: bind_group.rs  image.rs  mod.rs  render_pass.rs  sampler.rs  staging.rs  texture.rs
lib/src/gfx/wgpu/util/pipeline/: mod.rs  render_pipeline.rs
lib/src/midi2/: mod.rs
lib/src/midi2/device/: mod.rs  worlde_easycontrol9.rs
lib/src/midi2/device/launchpad_x/: mod.rs  peepline.rs
lib/src/midi2/device/launchpad_x/types/: color.rs  pos.rs
lib/src/window/: mod.rs  proxy.rs
lib/src/window/async_ext/: future.rs  mod.rs
phantoma/: Cargo.toml
phantoma/src/: main.rs
resources/config/: aqua.cfg  chaos.cfg  dragonage.cfg  funky_beat.cfg  halo.cfg  lobby.cfg  metalheart.cfg  pod.cfg  pyraship.cfg  reality.cfg  resolve.cfg  template.cfg
resources/demos/: ms7.dem
resources/keyframes/: church4.ckf
resources/lorem/: code0.txt  code2.txt
resources/models/: church.mtl  maze-big.mtl  maze.mtl  pillars.mtl  scim.mtl  temple.mtl
resources/scenes/: MEDKIT.glb  aquanox.glb  bhop.glb  canals.glb  core.glb  core2.glb  core3.glb  coreadv.glb  coreship.glb  cube.glb  cuberoom.glb  demo_console.glb  dragonage.glb  engicon.glb  face.glb  halo.glb  lobby.glb  medsci.glb  metalheart.glb  oceanfly.glb  pyraship.glb  spineplant.glb  stasis.glb  technoship.glb  test.glb  uvbounce.glb
resources/shaders/: Makefile  abberation.frag  abberation.frag.spv  abyss_stencil.frag  abyss_stencil.frag.spv  add.frag  add.frag.spv  alpha.frag  alpha.frag.spv  billboard.vert  billboard.vert.spv  black.frag  black.frag.spv  blit.frag  blit.frag.spv  bloom.frag  bloom.frag.spv  bloom_tile.frag  bloom_tile.frag.spv  blur_h.frag.spv  blur_v.frag  blur_v.frag.spv  bubbles.frag  bubbles.frag.spv  chladni.frag  chladni.frag.spv  circle.frag  circle.frag.spv  circlewave.frag  circlewave.frag.spv  clear.frag  clear.frag.spv  cockpit.frag  cockpit.frag.spv  color.frag  color.frag.spv  composite.frag  composite.frag.spv  composite_add.frag  composite_add.frag.spv  (+114 more)
resources/textures/: alphaskull.tga  block1-full.dds  burn.tga  cobble-full.dds  core2.glb  stnwal3-full.dds  te
resources2/keyframes/: church0.ckf  church1.ckf  church2.ckf  church3.ckf  church5.ckf
resources2/lorem/: code1.txt  code3.txt
resources2/models/: cube.mtl  maze-tex.mtl
resources2/scenes/: MEDKIT.glb  bhop.glb  canals.glb  city.glb  core.glb  core2.glb  core3.glb  coreadv.glb  cube.glb  engicon.glb  face.glb  lobby.glb  medsci.glb  minimal.glb  spineplant.glb  stasis.glb  test.glb  tube.glb
resources2/shaders/: abberation.frag  abberation.frag.spv  abyss_stencil.frag  abyss_stencil.frag.spv  add.frag  add.frag.spv  alpha.frag.spv  billboard.vert.spv  black.frag.spv  bloom.frag  bloom.frag.spv  bloom_tile.frag  bloom_tile.frag.spv  blur_h.frag  blur_h.frag.spv  blur_v.frag.spv  bubbles.frag  bubbles.frag.spv  chladni.frag  chladni.frag.spv  circle.frag  circle.frag.spv  circlewave.frag  circlewave.frag.spv  cockpit.frag.spv  color.frag.spv  composite.frag.spv  composite_add.frag  composite_add.frag.spv  composite_overlay.frag  composite_overlay.frag.spv  contour.frag  contour.frag.spv  digits.frag  digits.frag.spv  discolor.frag  discolor.frag.spv  edge.frag  edge.frag.spv  emissive.frag.spv  (+71 more)
resources2/textures/: block1.dds  cobble.dds  core2.glb
sketches/: new
sketches/abyss/: Cargo.toml
sketches/async/: Cargo.toml
sketches/beats/: Cargo.toml
sketches/demon1/: Cargo.toml
sketches/flash/: Cargo.toml
sketches/hexpop/: Cargo.toml  main.rs
sketches/interp/: Cargo.toml
sketches/maze/: Cargo.toml
sketches/midi/: Cargo.toml
sketches/modulate/: Cargo.toml
sketches/netbeats/: Cargo.toml
sketches/osc/: Cargo.toml
sketches/pillars/: Cargo.toml  main.rs
sketches/polymate/: Cargo.toml
sketches/shader/: Cargo.toml
sketches/syn005/: Cargo.toml
sketches/test/: Cargo.toml
src/: app.rs  app_asyncwinit.rs  async_closure.rs  audio.rs  config.rs  error.rs  init.rs  lib.rs  main-thread.rs  main.rs  math.rs  old.rs  osc.rs  prelude.rs  procedural.rs  resource.rs  time.rs  wavefront.rs
wgpu_staging/: Cargo.toml
(+159 files in other folders)
