[package]
name = "phantoma"
version = "0.1.0"
authors = ["Jack Foltz <jack@foltz.io>"]
edition = "2018"

[features]
default = ["vulkan", "window"]
vulkan = ["rendy/vulkan"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
gl = ["rendy/gl"]
empty = ["rendy/empty"]
profiler = ["thread_profiler/thread_profiler", "rendy/profiler"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
window = ["rendy/init-winit"]

[dependencies]
rendy = { version = "0.5.1", features = ["spirv-reflection", "shader-compiler"] }
rendy-core = "0.5.1"
rendy-shader = "0.5.1"

failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.1"
docopt = "1.1.0"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
enum_dispatch = "0.2.1"
thread_profiler = { version = "0.3.0", optional = true }

jack = "0.6.2"
rustfft = "3.0.1"
apodize = "1.0.0"
ringbuf = "0.2.1"

nalgebra = "0.19.0"
glsl-layout = "0.3.2"
genmesh = "0.6.2"
