[workspace]
#members = ["lib", "phantoma", "sketches/maze"]
#members = ["lib", "wgpu_glyph", "wgpu_staging", "phantoma", "sketches/syn005"]
members = ["lib", "wgpu_glyph", "wgpu_staging", "phantoma", "sketches/abyss"]
exclude = ["sketches/new", "sketches/template"]
resolver = "2"

[profile.release]
debug = true
