[package]
name = "lib"
version = "0.1.0"
authors = ["Jack Foltz <jack@foltz.io>"]
edition = "2021"

[dependencies]
# Gfx
winit = "0.25"
wgpu = { version = "0.11", features = ["spirv"] }
wgpu_staging = { path = "../wgpu_staging" }
wgpu_glyph = { path = "../wgpu_glyph" }
glyph_brush = "0.7"
# wgpu_staging = { path = "../wgpu_staging" }
# wgpu_glyph = { path = "../wgpu_glyph" }

# Gfx Support
#wavefront_obj = "8.0.0"
#obj = "0.10.1"
gltf = { version = "0.16", features = ["KHR_lights_punctual", "KHR_materials_unlit"] }
image = "0.23"

# Lib
log = "0.4.11"
pretty_env_logger = "0.4.0"
anyhow = "1"
thiserror = "1"

# Math
cgmath = "0.18"
splines = { version = "4", features = ["impl-cgmath"] }

# Audio
jack = "0.7"
apodize = "1"
ringbuf = "0.2"
rustfft = "6"

# MIDI / OSC
midir = { version = "0.7", features = ["jack"] }
rosc = "0.5"
crossbeam-queue = "0.3"
twitchchat = { version = "0.14.5", features = ["async", "async-std"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net"] }
tokio-util = "0.6"
#async-scoped = "0.4.1"
futures = "0.3.6"
parking_lot = "0.11"

# Util
bytemuck = { version = "1.4.1", features = ["derive"] }
safe-transmute = "0.11.0"
enum_dispatch = "0.3.3"
petgraph = "0.6"
itertools = "0.10"
